# OpenGL-Starter

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
data/: CloudNoise-512x512.uint8  CloudVolumeBase-128x128x128.uint8  index.html
examples/: triangle.cpp
examples/raymarch/: raymarch.cpp
examples/triangle/: main.cpp  triangle.cpp
examples/volumeclouds/: BruentonAtmosphere.cpp  BruentonAtmosphere.h  GLUtils.cpp  GLUtils.h  GUI.cpp  GUI.h  Planet.cpp  Planet.h  ScreenQuad.cpp  ScreenQuad.h  TextureDebugger.cpp  TextureDebugger.h  VolumeClouds.cpp  VolumeClouds.h  main.cpp  text_renderer.cpp  text_renderer.h  volumeclouds.cpp
include/: Axes.h  Camera.h  CameraController.h  Ellipsoid.h  FirstPersonCameraController.h  LoadShaders.h  Program.h  Renderable.h  Transforms.h  vapp.h
shaders/: AtmosphericScattering.h  AtmosphericScatteringWithClouds.h  CloudShadows.h  Clouds.h  ColorTemperature.h  DepthPrecision.h  FinalComposite.frag  GlobalDefines.h  GlobalUniforms.h  RaySphereIntersection.h  Remap.h  ToneMapping.h
shaders/Brdfs/: HenyeyGreenstein.h
shaders/Utils/: Checker.h  Srgb.h
shaders/axes/: axes.frag  axes.vert
shaders/bruentonatmosphere/: a.glsl  atmosphere.frag  atmosphere.vert
shaders/common/: positionOnly.vert  solidColor.frag
shaders/planet/: planet.frag  planet.vert
shaders/ray_march/: HenyeyGreenstein.glsl  Remap.glsl  clouds.frag  clouds.vert  common.glsl
shaders/texturedebugger/: texturedebugger.frag  texturedebugger.vert
shaders/triangle/: triangle.frag  triangle.vert
shaders/volumeclouds/: CompositeClouds.frag  ScreenQuad.vert  blit.frag  textureQueryLodPolyfill.h  volumeclouds.frag  volumeclouds.vert
src/: Axes.cpp  Camera.cpp  CameraController.cpp  Ellipsoid.cpp  FirstPersonCameraController.cpp  LoadShaders.cpp  Program.cpp  Transforms.cpp  vapp.cpp
